--- a/halmaz.html
+++ b/halmaz.html
@@ -27,5 +27,7 @@
         <option value="differenceBA">Különbség (B – A)</option>
     </select>
     <button onclick="calculate()">Számolás</button>
+    <h3>Eredmény:</h3>
+    <div class="eredmeny" id="ered"></div>
 </body>
 </html>
