--- a/halmaz.html
+++ b/halmaz.html
@@ -26,7 +26,7 @@
         <option value="differenceAB">Különbség (A – B)</option>
         <option value="differenceBA">Különbség (B – A)</option>
     </select>
-    <button onclick="calculate()">Számolás</button>
+    <button onclick="halmazmuvelet()">Számolás</button>
     <h3>Eredmény:</h3>
     <div class="eredmeny" id="ered"></div>
 </body>
