--- a/halmaz.html
+++ b/halmaz.html
@@ -31,5 +31,6 @@
     <button onclick="halmazmuvelet()">Számolás</button>
     <h3>Eredmény:</h3>
     <div class="eredmeny" id="ered"></div>
+    <canvas id="MyCanvas" width="300" height="200" style="border:1px solid #000; margin-top:20px;"></canvas>
 </body>
 </html>
