--- a/halmaz.html
+++ b/halmaz.html
@@ -32,7 +32,7 @@
     <h3>Eredmény:</h3>
     <div class="eredmeny" id="ered"></div>
     
-    <canvas id="MyCanvas" width="300" height="200" style="border:1px solid #000; margin-top:20px;"></canvas>
+    <canvas id="MyCanvas" width="400" height="300"></canvas>
     
 </body>
 </html>
