--- a/halmaz.html
+++ b/halmaz.html
@@ -31,8 +31,8 @@
     <button id="calculateBtn">Számolás</button>
     <h3>Eredmény:</h3>
     <div class="eredmeny" id="ered"></div>
-    
-    <canvas id="MyCanvas" width="400" height="300"></canvas>
-    
+
+    <canvas id="MyCanvas" width="300" height="250" style="border: 1px solid black;"></canvas>
+
 </body>
 </html>
